--- a/cv.css
+++ b/cv.css
@@ -173,7 +173,7 @@ ul.navbar li.icon
 	width: height;
 	border-radius: 50%;
 	border-style: solid;
-	border-width: 2px;X
+	border-width: 2px;
 	border-color: white;
 	box-shadow: 0px 0px 20px #000000;
 }
@@ -196,15 +196,142 @@ ul.navbar li.icon
 	width: 90%;
 	height: auto;
 	border-radius: 50%;
-	
+}
+
+audio
+{
+	 width: 300px;
+	 height: 40px;
+}
+
+.diapo
+{
+	text-align: center;
+	width: 62vw;
+	height: 300px;
+	border-top-style: solid;
+	border-bottom-style: solid;
+	overflow: hidden;
+	overflow-x: scroll;
+}
+
+.diapo div
+{
+	height: 300px;
+	white-space: nowrap;
+}
+
+.diapo img
+{
+	height: 100%;
+	width: auto;
+}
+
+.butleft
+{
+	line-height: 225px;
+	color: white;
+	font-size: 30px;
+	text-shadow: 2px 2px 9px #000000;
+	text-align: center;
+	position: absolute;
+	float: left;
+	background-color: rgba(50,50,50, 0.7);
+	width: 40px;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+}
+
+.butright
+{
+	line-height: 225px;
+	color: white;
+	font-size: 30px;
+	text-shadow: 2px 2px 9px #000000;
+	text-align: center;
+	position: absolute;
+	float: left;
+	background-color: rgba(50,50,50, 0.7);
+	width: 40px;
+	margin-left: calc(62vw - 40px);
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;
 }
 
 .timediv
 {
+	display:none;
 	text-align: left;
-	width: 100%;
-	min-height: 100%;
 	background-color: white;
-	display: none;
+	height: 100%;
+	top:0;
+	bottom:0;
 	opacity: 0;
+	padding-left: 1%;
+	padding-right: 1%;
+}
+
+.showimg
+{
+	display: inline-block;
+	width: 300px;
+	height: 300px;
+	border-radius: 50%;
+	border-style: solid;
+	vertical-align: middle;
+	text-align: center;
+	margin: 1%;
+	background-size: 300px 300px;
+}
+
+.showimg p
+{
+	margin:0;
+	border-radius: 2%;
+	opacity: 0;
+	color: white;
+	text-shadow: 2px 0px 10px #000000;
+}
+
+#form
+{	border-style: solid;
+	border-color: green;
+	text-align: center;
+}
+
+#form div:first-child
+{
+	display:block;
+	width: 300px;
+	border-style: solid;
+	border-color: red;
+}
+#form div:not(:first-child)
+{
+	display:inline-block;
+	width: 400px;
+	border-style: solid;
+	border-color: cyan;
+}
+
+#form  input
+{
+	width: 90%;
+	height: 5vh;
+	border-radius: 10px;
+}
+
+#form textarea
+{
+	width: 90%;
+	height : 28vh;
+	border-radius: 10px;
 }
