--- a/cv.css
+++ b/cv.css
@@ -65,12 +65,13 @@ span
 {
 	background-color: rgba(0, 0, 0, 0.6);
 	padding: 10px;
-	color: lavender;
+	color: white;
 	font-size: 42px;
 	z-index: 0;
 	position:fixed;
 	bottom: 30vh;
 	left: 20vw;
+	border-radius: 5px;
 	text-align: center;
 	vertical-align: middle;
 }
@@ -223,6 +224,8 @@ ul.navbar li.icon
 #avatar
 {
 	display: inline-block;
+	background: url("img/avatar.jpg");
+	background-size:cover;
 	margin-top: 2vh;
 	margin-left: 2vh;
 	margin-right: 2vh;
@@ -461,6 +464,17 @@ audio
 #pa4:hover
 {
 	background-image: url("img/veg.jpg");
+}
+
+#download
+{
+	box-shadow: 3px 3px 5px grey;
+	text-decoration: none;
+	color: grey;
+	border: solid 1px grey;
+	background-color: lavender;
+	border-radius: 10px;
+	padding:8px;
 }
 
 #knowledge canvas
